--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,13 +8,7 @@
 <div th:insert="~{common/sourceList :: sourceList}"></div>
 <div th:replace="~{common/messageIcon :: messageIcon}"></div>
 <div class="container">
-  <div class="row">
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-  <div class="row justify-content-center my-5">
+  <div class="row justify-content-center" style="margin-top: 20vh">
     <div class="w-100 m-auto px-4 form-signin bg-body">
       <br>
       <h1 class="h3 mb-3 fw-normal">ログイン画面</h1>
