本登録画面の修正

--- a/src/main/resources/templates/signupConfirm.html
+++ b/src/main/resources/templates/signupConfirm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>エラー編集</title>
+  <title>登録仮完了</title>
 </head>
 <body>
   <div th:insert="~{common/sourceList :: sourceList}"></div>
