--- a/src/main/resources/templates/signupCompletion.html
+++ b/src/main/resources/templates/signupCompletion.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>エラー編集</title>
+  <title>本登録結果</title>
 </head>
 <body>
 <div th:insert="~{common/sourceList :: sourceList}"></div>
